# materugen

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  build-npm.ps1  build-wasm.ps1  package.json  run-dev.ps1  test.ps1  tsconfig.json
.github/workflows/: deploy.yml  publish.yml
output/: 1.jpg.json  random.json  teal.json  white.json
src/: error.rs  index.ts  lib.rs  main.rs  wasm.rs
web/: index.html
